# graduate

./: .gitignore  README.md  main.py  pyproject.toml
paper_code/stage01_data_process_code/: README.md
paper_code/stage01_data_process_code/utils/: get_root_path.py
paper_code/stage02_KLvae_code/src/: dataset_raw.py  model_vae_3d.py  train_vae.py
paper_code/stage02_KLvae_code/utils/: process_data_for_stage2.py
paper_code/stage02_KLvae_single_code/src/: config.py  dataset.py  discriminator.py  inference.py  losses.py  modules.py  train.py  vae_model.py
paper_code/stage02_KLvae_single_code_v2/: analysis_metrics.py  evaluate_klvae_quant_192.py  inference.py  inference_check.py  plot_klvae_thesis_figures.py  train.py  vis_log.py
paper_code/stage02_KLvae_single_code_v2/data/: dataset.py
paper_code/stage02_vqvae_code/: README.md
paper_code/stage04_result_analyze_code/: README.md
paper_code/stage07_latent_ldm_code/: README.md  README_结果分析参数说明.md
paper_code/stage08_latent_Transformer_code/: README.md  requirements.txt
paper_code/utils/: analyze_porosity.py  calc_latentNPY_scale_factor.py  check_20_data.py  check_histogram.py  check_name_sort_20.py  check_ssh.py  check_visual_npy_stats.py  detect_roi.py  fix_number.py  get_root_path.py  npy2raw.py  stage01_analyze_poro_by_csv_v2.py  stage01_analyze_poro_by_csv_v3.py  stage01_analyze_porosity_by_csv.py  stage01_verify_hypo.py  stage01_verify_hypothesis_paper_img.py  stage02_prepare_latent_npy.py  verify_hypothesis.py  verify_hypothesis_paper_img.py  visual_hist.py  visual_hist_v2.py  visual_rev_npy_threeFacets.py
(+271 files in other folders)
