[project]
name = "chendou"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.12.0",
    "imagecodecs>=2025.3.30",
    "matplotlib>=3.10.8",
    "opencv-python>=4.13.0.90",
    "pandas>=2.3.3",
    "pywavelets>=1.8.0",
    "scikit-image>=0.25.2",
    "seaborn>=0.13.2",
    "tifffile>=2025.5.10",
    "tqdm>=4.67.1",
]
