[project]
name = "chendou"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.12.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "opencv-python>=4.13.0.90",
    "pandas>=2.3.3",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "tensorboard>=2.20.0",
    "tifffile>=2025.5.10",
    "tqdm>=4.67.1",
]

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
